# probate

./: .gitignore  .replit  common_names.txt  probate.py  probatewebappmain.py  pyproject.toml  pyproject.toml.backup  scrape.py  search.py
probatewebapp/: __init__.py  _tests.py  config.py  database.py  forms.py  logging.py  models.py  probate.db  probate.db-journal  processing.py  renamed.txt  routes.py  schema.sql  scrape.py  search.py  spillover_matters.txt  update.py  update_db.py
probatewebapp/db/: probate.db-shm  probate.db-wal
probatewebapp/logs/: probatewebapp.log.1  probatewebapp.log.2
probatewebapp/static/css/: styles.css
probatewebapp/templates/: 404.html  500.html  base.html  cancel_registration.html  home.html  home_no_updater.html  main.html  manage_registration.html  notification.html  notification.txt  notification_1.html  results.html  testing.html
probatewebapp/templates/emails/: base.html  base.txt  list.html  list.txt  notification.html  notification.txt
