[tool.poetry]
name = "repl_python3_probate"
version = "0.1.0"
description = ""
authors = ["Mez <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
wtforms = "^2.3.3"
flask = "^1.1.2"
flask-wtf = "^0.14.3"
robobrowser = "^0.5.3"
werkzeug = "^1.0.1"
waitress = "^2.0.0"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
