[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Mez <<>>"]
description = "Search WASC Probate Division by deceased's name"
name = "probate"
version = "0.5.0"
[tool.poetry.dependencies]
Flask = "^2.0.1"
Flask-Mail = "^0.9.1"
Flask-WTF = "^0.15.1"
PyJWT = "^2.1.0"
WTForms = "^2.3.3"
python = "^3.6"
robobrowser = "^0.5.3"
selenium = "^3.141.0"
waitress = "^2.0.0"
email-validator = "^1.1.3"
[tool.poetry.dev-dependencies]
