[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0"
Flask-WTF = "^1.1.1"
requests = "^2.31.0"
selenium = "^4.10.0"
WTForms = "^3.0.1"
Flask = "^2.3.2"
waitress = "^2.1.2"
robobrowser = "^0.5.3"
Flask-Mail = "^0.9.1"
Werkzeug = "^2.3.6"
PyJWT = "2.7.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
urllib3 = "1.26.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"